# montecarlo

./: README.md  pyproject.toml  setup.sh
montecarlo/: montecarlo-selection.py
