[tool.poetry]
name = "montecarlo"
version = "0.1.0"
description = "Monte-Carlo simulation"
authors = ["Justin Ohrenberger <justinohrenberger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
scipy = "^1.14.1"
matlib = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
